tests/baselines/reference/interfaceExtendingClassWithPrivates.errors.txt
tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts(5,11): error TS2429: Interface 'I' incorrectly extends interface 'Foo':
  Property 'x' is private in type 'Foo' but not in type 'I'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts(15,10): error TS8010: Property 'x' is private and only accessible within struct 'Foo'.


==== tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts (2 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo { // error
              ~
!!! error TS2429: Interface 'I' incorrectly extends interface 'Foo':
!!! error TS2429:   Property 'x' is private in type 'Foo' but not in type 'I'.
        x: string;
    }
    
    interface I2 extends Foo {
        y: string;
    }
    
    var i: I2;
    var r = i.y;
    var r2 = i.x; // error
             ~~~
!!! error TS8010: Property 'x' is private and only accessible within struct 'Foo'.